--- a/index.html
+++ b/index.html
@@ -13,21 +13,23 @@
 </head>
 <body>
     <!--content header-->
-    <header>
-        <nav>
-            <a href="#" class="logo">
-                <span class="logo-span">Web</span>Studio
-            </a>
+    <header class="header">
+        <div class="container">
+            <nav>
+                <a href="#" class="logo">
+                    <span class="logo-span">Web</span>Studio
+                </a>
+                <ul class="items list">
+                    <li><a href="" class="list-nav current">Студия</a></li>
+                    <li><a href="./portfolio.html" class="list-nav">Портфолио</a></li>
+                    <li><a href="" class="list-nav">Контакты</a></li>
+                </ul>
+            </nav>
             <ul class="items list">
-                <li><a href="" class="list-nav current">Студия</a></li>
-                <li><a href="./portfolio.html" class="list-nav">Портфолио</a></li>
-                <li><a href="" class="list-nav">Контакты</a></li>
+                <li><a href="mailto:info@devstudio.com" class="list-nav">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="list-nav">+38 096 111 11 11</a></li>
             </ul>
-        </nav>
-        <ul class="items list">
-            <li><a href="mailto:info@devstudio.com" class="list-nav">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="list-nav">+38 096 111 11 11</a></li>
-        </ul>
+        </div>
     </header>
     <!--main content-->
     <main>
@@ -39,16 +41,18 @@
             </section>
             <!--our peculiarities-->
             <section>
-                <h2 class="heading">Особенности, за которые нас выберают</h2>
-                <ul class="list">
+                <h2 class="heading visually-hidden">Особенности, за которые нас выберают</h2>
+                <ul class="list container features">
                     <li>
                         <h3 class="subtitle">Внимание к деталям</h3>
-                        <p class="subtitle-text about">Идейные соображения, а также начало повседневной работы по формированию
+                        <p class="subtitle-text about">Идейные соображения, а также начало повседневной работы по
+                            формированию
                             позиции.</p>
                     </li>
                     <li>
                         <h3 class="subtitle">Пунктуальность</h3>
-                        <p class="subtitle-text about">Задача организации, в особенности же рамки и место обучения кадров влечет за
+                        <p class="subtitle-text about">Задача организации, в особенности же рамки и место обучения кадров
+                            влечет за
                             собой.</p>
                     </li>
                     <li>
@@ -58,59 +62,64 @@
                     </li>
                     <li>
                         <h3 class="subtitle">Современные технологии</h3>
-                        <p class="subtitle-text about">Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+                        <p class="subtitle-text about">Значимость этих проблем настолько очевидна, что реализация плановых
+                            заданий.
                         </p>
                     </li>
                 </ul>
             </section>
             <!--What are we doing?-->
-            <section>
+            <section class="container granting-section">
                 <h2 class="heading">Чем мы занимаемся</h2>
-                <ul class="list">
+                <ul class="list granting">
                     <li><img src="./images/logo1.jpg" alt="writing code" width="370"></li>
                     <li><img src="./images/logo2.jpg" alt="work with applications" width="370"></li>
                     <li><img src="./images/logo3.jpg" alt="creation of the design" width="370"></li>
                 </ul>
             </section>
             <!--our team-->
-            <section>
-                <h2 class="heading">Наша команда</h2>
-                <ul class="list">
-                    <li>
-                        <img src="./images/team1.jpg" alt="" width="270">
-                        <h3 class="text">Игорь Демьяненко</h3>
-                        <p class="text-pade">Product Designer</p>
-                    </li>
-                    <li>
-                        <img src="./images/team2.jpg" alt="" width="270">
-                        <h3 class="text">Ольга Репина</h3>
-                        <p class="text-pade">Frontend Developer</p>
-                    </li>
-                    <li>
-                        <img src="./images/team3.jpg" alt="" width="270">
-                        <h3 class="text">Николай Тарасов</h3>
-                        <p class="text-pade">Marketing</p>
-                    </li>
-                    <li>
-                        <img src="./images/team4.jpg" alt="" width="270">
-                        <h3 class="text">Михаил Ермаков</h3>
-                        <p class="text-pade">UI Designer</p>
-                    </li>
-                </ul>
-            </section>
+            <div class="command-div">
+                <section class="container command">
+                    <h2 class="heading">Наша команда</h2>
+                    <ul class="list command-list">
+                        <li>
+                            <img src="./images/team1.jpg" alt="" width="270">
+                            <h3 class="text">Игорь Демьяненко</h3>
+                            <p class="text-pade">Product Designer</p>
+                        </li>
+                        <li>
+                            <img src="./images/team2.jpg" alt="" width="270">
+                            <h3 class="text">Ольга Репина</h3>
+                            <p class="text-pade">Frontend Developer</p>
+                        </li>
+                        <li>
+                            <img src="./images/team3.jpg" alt="" width="270">
+                            <h3 class="text">Николай Тарасов</h3>
+                            <p class="text-pade">Marketing</p>
+                        </li>
+                        <li>
+                            <img src="./images/team4.jpg" alt="" width="270">
+                            <h3 class="text">Михаил Ермаков</h3>
+                            <p class="text-pade">UI Designer</p>
+                        </li>
+                    </ul>
+                </section>
+            </div>
         </section>
     </main>
     <footer class="footer">
-        <a href="/" class="logo">
-            <span class="logo-span">Web</span>Studio
-        </a>
-        <address>
-            <ul class="list about">
-                <li><a href="" class="list-link-span">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a href="mailto:info@devstudio.com" class="list-link">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="list-link">+38 096 111 11 11</a></li>
-            </ul>
-        </address>
+        <div class="container">
+            <a href="/" class="footer-logo">
+                <span class="logo-span">Web</span>Studio
+            </a>
+            <address>
+                <ul class="list about footer-list">
+                    <li><a href="" class="list-link-span">г. Киев, пр-т Леси Украинки, 26</a></li>
+                    <li><a href="mailto:info@devstudio.com" class="list-link">info@devstudio.com</a></li>
+                    <li><a href="tel:+380961111111" class="list-link">+38 096 111 11 11</a></li>
+                </ul>
+            </address>
+        </div>
     </footer>
 </body>
 </html>
