--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
 <body>
     <!--content header-->
     <header class="header">
-        <div class="container">
-            <nav>
+        <div class="container header-div">
+            <nav class="header-nav">
                 <a href="#" class="logo">
                     <span class="logo-span">Web</span>Studio
                 </a>
                 <ul class="items list">
-                    <li><a href="" class="list-nav current">Студия</a></li>
-                    <li><a href="./portfolio.html" class="list-nav">Портфолио</a></li>
-                    <li><a href="" class="list-nav">Контакты</a></li>
+                    <li class="items-nav"><a href="" class="list-nav current">Студия</a></li>
+                    <li class="items-nav"><a href="./portfolio.html" class="list-nav">Портфолио</a></li>
+                    <li class="items-nav"><a href="" class="list-nav">Контакты</a></li>
                 </ul>
             </nav>
             <ul class="items list">
-                <li><a href="mailto:info@devstudio.com" class="list-nav">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="list-nav">+38 096 111 11 11</a></li>
+                <li class="items-contacts"><a href="mailto:info@devstudio.com" class="list-nav">info@devstudio.com</a></li>
+                <li class="items-contacts"><a href="tel:+380961111111" class="list-nav">+38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
