--- a/index.html
+++ b/index.html
@@ -36,50 +36,56 @@
         <section>
             <!--content hero-->
             <section class="hero">
-                <h1 class="header-hero">Эффективные решения <br> для вашего бизнеса</h1>
-                <button type="button" class="button">Заказать услугу</button>
+                <div class="container">
+                    <h1 class="header-hero">Эффективные решения <br> для вашего бизнеса</h1>
+                    <button type="button" class="button">Заказать услугу</button>
+                </div>
             </section>
             <!--our peculiarities-->
-            <section>
-                <h2 class="heading visually-hidden">Особенности, за которые нас выберают</h2>
-                <ul class="list container features">
-                    <li>
-                        <h3 class="subtitle">Внимание к деталям</h3>
-                        <p class="subtitle-text about">Идейные соображения, а также начало повседневной работы по
-                            формированию
-                            позиции.</p>
-                    </li>
-                    <li>
-                        <h3 class="subtitle">Пунктуальность</h3>
-                        <p class="subtitle-text about">Задача организации, в особенности же рамки и место обучения кадров
-                            влечет за
-                            собой.</p>
-                    </li>
-                    <li>
-                        <h3 class="subtitle">Планирование</h3>
-                        <p class="subtitle-text about">Равным образом консультация с широким активом в значительной степени
-                            обуславливает.</p>
-                    </li>
-                    <li>
-                        <h3 class="subtitle">Современные технологии</h3>
-                        <p class="subtitle-text about">Значимость этих проблем настолько очевидна, что реализация плановых
-                            заданий.
-                        </p>
-                    </li>
-                </ul>
+            <section class="features-section">
+                <div class="container">
+                    <h2 class="heading visually-hidden">Особенности, за которые нас выберают</h2>
+                    <ul class="list features">
+                        <li>
+                            <h3 class="subtitle">Внимание к деталям</h3>
+                            <p class="subtitle-text about">Идейные соображения, а также начало повседневной работы по
+                                формированию
+                                позиции.</p>
+                        </li>
+                        <li>
+                            <h3 class="subtitle">Пунктуальность</h3>
+                            <p class="subtitle-text about">Задача организации, в особенности же рамки и место обучения кадров
+                                влечет за
+                                собой.</p>
+                        </li>
+                        <li>
+                            <h3 class="subtitle">Планирование</h3>
+                            <p class="subtitle-text about">Равным образом консультация с широким активом в значительной степени
+                                обуславливает.</p>
+                        </li>
+                        <li>
+                            <h3 class="subtitle">Современные технологии</h3>
+                            <p class="subtitle-text about">Значимость этих проблем настолько очевидна, что реализация плановых
+                                заданий.
+                            </p>
+                        </li>
+                    </ul>
+                </div>
             </section>
             <!--What are we doing?-->
-            <section class="container granting-section">
-                <h2 class="heading">Чем мы занимаемся</h2>
-                <ul class="list granting">
-                    <li><img src="./images/logo1.jpg" alt="writing code" width="370"></li>
-                    <li><img src="./images/logo2.jpg" alt="work with applications" width="370"></li>
-                    <li><img src="./images/logo3.jpg" alt="creation of the design" width="370"></li>
-                </ul>
+            <section class="granting-section">
+                <div class="container">
+                    <h2 class="heading">Чем мы занимаемся</h2>
+                    <ul class="list granting">
+                        <li><img src="./images/logo1.jpg" alt="writing code" width="370"></li>
+                        <li><img src="./images/logo2.jpg" alt="work with applications" width="370"></li>
+                        <li><img src="./images/logo3.jpg" alt="creation of the design" width="370"></li>
+                    </ul>
+                </div>
             </section>
             <!--our team-->
-            <div class="command-div">
-                <section class="container command">
+            <section class="command">
+                <div class="container">
                     <h2 class="heading">Наша команда</h2>
                     <ul class="list command-list">
                         <li>
@@ -103,8 +109,8 @@
                             <p class="text-pade">UI Designer</p>
                         </li>
                     </ul>
-                </section>
-            </div>
+                </div>
+            </section>
         </section>
     </main>
     <footer class="footer">
