--- a/portfolio.html
+++ b/portfolio.html
@@ -36,80 +36,86 @@
             </ul>
         </div>
     </header>
-    <main class="container">
-        <h1 class="visually-hidden">Портфолио</h1>
-        <ul class="list-buttons">
-            <li><button type="button" class="button-portfolio">Все</button></li>
-            <li><button type="button" class="button-portfolio">Веб-сайты</button></li>
-            <li><button type="button" class="button-portfolio">Приложения</button></li>
-            <li><button type="button" class="button-portfolio">Дизайн</button></li>
-            <li><button type="button" class="button-portfolio">Маркетинг</button></li>
-        </ul>
-        <ul class="list-portfolio">
-            <li>
-                <a href="#" class="link-portfolio">
-                    <img src="./images/portfolio/portfolio1.jpg" alt="Екран ноутбука" width="370" height="294">
-                    <h2 class="list-item">Технокряк</h2>
-                    <p class="list-page">Веб-сайт</p>
-                </a>
-            </li>
-            <li>
-                <a href="" class="link-portfolio">
-                    <img src="./images/portfolio/portfolio2.jpg" alt="Два баскетболиста играют в игру" width="370" height="294">
-                    <h2 class="list-item">Постер New Orlean vs Golden Star</h2>
-                    <p class="list-page">Дизайн</p>
-                </a>
-            </li>
-            <li>
-                <a href="" class="link-portfolio">
-                    <img src="./images/portfolio/portfolio3.jpg" alt="Логотим ресторана" width="370" height="294">
-                    <h2 class="list-item">Ресторан Seafood</h2>
-                    <p class="list-page">Приложение</p>
-                </a>
-            </li>
-            <li>
-                <a href="" class="link-portfolio">
-                    <img src="./images/portfolio/portfolio4.jpg" alt="Наушники" width="370" height="294">
-                    <h2 class="list-item">Проект Prime</h2>
-                    <p class="list-page">Маркетинг</p>
-                </a>
-            </li>
-            <li>
-                <a href="" class="link-portfolio">
-                    <img src="./images/portfolio/portfolio5.jpg" alt="Две коробки с надписями" width="370" height="294">
-                    <h2 class="list-item">Проект Boxes</h2>
-                    <p class="list-page">Приложение</p>
-                </a>
-            </li>
-            <li>
-                <a href="" class="link-portfolio">
-                    <img src="./images/portfolio/portfolio6.jpg" alt="Отображение сайта на мониторе" width="370" height="294">
-                    <h2 class="list-item">Inspiration has no Borders</h2>
-                    <p class="list-page">Веб-сайт</p>
-                </a>
-            </li>
-            <li>
-                <a href="" class="link-portfolio">
-                    <img src="./images/portfolio/portfolio7.jpg" alt="Розгорнут журнал" width="370" height="294">
-                    <h2 class="list-item">Издание Limited Edition</h2>
-                    <p class="list-page">Дизайн</p>
-                </a>
-            </li>
-            <li>
-                <a href="" class="link-portfolio">
-                    <img src="./images/portfolio/portfolio8.jpg" alt="Етикетка бренда" width="370" height="294">
-                    <h2 class="list-item">Проект LAB</h2>
-                    <p class="list-page">Маркетинг</p>
-                </a>
-            </li>
-            <li>
-                <a href="" class="link-portfolio">
-                    <img src="./images/portfolio/portfolio9.jpg" alt="Печатает проект на ноутбуке" width="370" height="294">
-                    <h2 class="list-item">Growing Business</h2>
-                    <p class="list-page">Приложение</p>
-                </a>
-            </li>
-        </ul>
+    <main>
+        <section class="section-portfolio">
+            <div class="container">
+                <h1 class="visually-hidden">Портфолио</h1>
+                <ul class="list-buttons">
+                    <li><button type="button" class="button-portfolio">Все</button></li>
+                    <li><button type="button" class="button-portfolio">Веб-сайты</button></li>
+                    <li><button type="button" class="button-portfolio">Приложения</button></li>
+                    <li><button type="button" class="button-portfolio">Дизайн</button></li>
+                    <li><button type="button" class="button-portfolio">Маркетинг</button></li>
+                </ul>
+                <ul class="list-portfolio">
+                    <li>
+                        <a href="#" class="link-portfolio">
+                            <img src="./images/portfolio/portfolio1.jpg" alt="Екран ноутбука" width="370" height="294">
+                            <h2 class="list-item">Технокряк</h2>
+                            <p class="list-page">Веб-сайт</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="link-portfolio">
+                            <img src="./images/portfolio/portfolio2.jpg" alt="Два баскетболиста играют в игру" width="370"
+                                height="294">
+                            <h2 class="list-item">Постер New Orlean vs Golden Star</h2>
+                            <p class="list-page">Дизайн</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="link-portfolio">
+                            <img src="./images/portfolio/portfolio3.jpg" alt="Логотим ресторана" width="370" height="294">
+                            <h2 class="list-item">Ресторан Seafood</h2>
+                            <p class="list-page">Приложение</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="link-portfolio">
+                            <img src="./images/portfolio/portfolio4.jpg" alt="Наушники" width="370" height="294">
+                            <h2 class="list-item">Проект Prime</h2>
+                            <p class="list-page">Маркетинг</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="link-portfolio">
+                            <img src="./images/portfolio/portfolio5.jpg" alt="Две коробки с надписями" width="370" height="294">
+                            <h2 class="list-item">Проект Boxes</h2>
+                            <p class="list-page">Приложение</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="link-portfolio">
+                            <img src="./images/portfolio/portfolio6.jpg" alt="Отображение сайта на мониторе" width="370"
+                                height="294">
+                            <h2 class="list-item">Inspiration has no Borders</h2>
+                            <p class="list-page">Веб-сайт</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="link-portfolio">
+                            <img src="./images/portfolio/portfolio7.jpg" alt="Розгорнут журнал" width="370" height="294">
+                            <h2 class="list-item">Издание Limited Edition</h2>
+                            <p class="list-page">Дизайн</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="link-portfolio">
+                            <img src="./images/portfolio/portfolio8.jpg" alt="Етикетка бренда" width="370" height="294">
+                            <h2 class="list-item">Проект LAB</h2>
+                            <p class="list-page">Маркетинг</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="link-portfolio">
+                            <img src="./images/portfolio/portfolio9.jpg" alt="Печатает проект на ноутбуке" width="370" height="294">
+                            <h2 class="list-item">Growing Business</h2>
+                            <p class="list-page">Приложение</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
     <footer class="footer">
         <div class="container">
