--- a/portfolio.html
+++ b/portfolio.html
@@ -51,66 +51,84 @@
                     <li>
                         <a href="#" class="link-portfolio">
                             <img src="./images/portfolio/portfolio1.jpg" alt="Екран ноутбука" width="370" height="294">
-                            <h2 class="list-item">Технокряк</h2>
-                            <p class="list-page">Веб-сайт</p>
+                            <div class="description">
+                                <h2 class="list-item">Технокряк</h2>
+                                <p class="list-page">Веб-сайт</p>
+                            </div>
                         </a>
                     </li>
                     <li>
                         <a href="" class="link-portfolio">
                             <img src="./images/portfolio/portfolio2.jpg" alt="Два баскетболиста играют в игру" width="370"
                                 height="294">
-                            <h2 class="list-item">Постер New Orlean vs Golden Star</h2>
-                            <p class="list-page">Дизайн</p>
+                            <div class="description">
+                                <h2 class="list-item">Постер New Orlean vs Golden Star</h2>
+                                <p class="list-page">Дизайн</p>
+                            </div>
                         </a>
                     </li>
                     <li>
                         <a href="" class="link-portfolio">
                             <img src="./images/portfolio/portfolio3.jpg" alt="Логотим ресторана" width="370" height="294">
-                            <h2 class="list-item">Ресторан Seafood</h2>
-                            <p class="list-page">Приложение</p>
+                            <div class="description">
+                                <h2 class="list-item">Ресторан Seafood</h2>
+                                <p class="list-page">Приложение</p>
+                            </div>
                         </a>
                     </li>
                     <li>
                         <a href="" class="link-portfolio">
                             <img src="./images/portfolio/portfolio4.jpg" alt="Наушники" width="370" height="294">
-                            <h2 class="list-item">Проект Prime</h2>
-                            <p class="list-page">Маркетинг</p>
+                            <div class="description">
+                                <h2 class="list-item">Проект Prime</h2>
+                                <p class="list-page">Маркетинг</p>
+                            </div>
                         </a>
                     </li>
                     <li>
                         <a href="" class="link-portfolio">
                             <img src="./images/portfolio/portfolio5.jpg" alt="Две коробки с надписями" width="370" height="294">
-                            <h2 class="list-item">Проект Boxes</h2>
-                            <p class="list-page">Приложение</p>
+                            <div class="description">
+                                <h2 class="list-item">Проект Boxes</h2>
+                                <p class="list-page">Приложение</p>
+                            </div>
                         </a>
                     </li>
                     <li>
                         <a href="" class="link-portfolio">
                             <img src="./images/portfolio/portfolio6.jpg" alt="Отображение сайта на мониторе" width="370"
                                 height="294">
-                            <h2 class="list-item">Inspiration has no Borders</h2>
-                            <p class="list-page">Веб-сайт</p>
+                            <div class="description">
+                                <h2 class="list-item">Inspiration has no Borders</h2>
+                                <p class="list-page">Веб-сайт</p>
+                            </div>
                         </a>
                     </li>
                     <li>
                         <a href="" class="link-portfolio">
                             <img src="./images/portfolio/portfolio7.jpg" alt="Розгорнут журнал" width="370" height="294">
-                            <h2 class="list-item">Издание Limited Edition</h2>
-                            <p class="list-page">Дизайн</p>
+                            <div class="description">
+                                <h2 class="list-item">Издание Limited Edition</h2>
+                                <p class="list-page">Дизайн</p>
+                            </div>
                         </a>
                     </li>
                     <li>
                         <a href="" class="link-portfolio">
                             <img src="./images/portfolio/portfolio8.jpg" alt="Етикетка бренда" width="370" height="294">
-                            <h2 class="list-item">Проект LAB</h2>
-                            <p class="list-page">Маркетинг</p>
+                            <div class="description">
+                                <h2 class="list-item">Проект LAB</h2>
+                                <p class="list-page">Маркетинг</p>
+                            </div>
                         </a>
                     </li>
                     <li>
                         <a href="" class="link-portfolio">
                             <img src="./images/portfolio/portfolio9.jpg" alt="Печатает проект на ноутбуке" width="370" height="294">
-                            <h2 class="list-item">Growing Business</h2>
-                            <p class="list-page">Приложение</p>
+                            <div class="description">
+                                <h2 class="list-item">Growing Business</h2>
+                                <p class="list-page">Приложение</p>
+                            </div>
                         </a>
                     </li>
                 </ul>
